adicionando documentação para showOpenigHandler
