# handler/response.go
@@ -41,3 +41,7 @@ type DeleteOpeningResponse struct {
 	Message string                 `json:"message"`
 	Data    schema.OpeningResponse `json:"data"`
 }
+type ShowOpeningResponse struct {
+	Message string                 `json:"message"`
+	Data    schema.OpeningResponse `json:"data"`
+}
